Solution that contains all days - input file

--- a/1-12-2020/RepairReport/Report-Repair-Test/Report-Repair-Test.csproj
+++ b/1-12-2020/RepairReport/Report-Repair-Test/Report-Repair-Test.csproj
@@ -8,12 +8,23 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="input.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="input.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="NUnit" Version="3.12.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.16.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\Utilities\Utilities\Utilities.csproj" />
     <ProjectReference Include="..\Report-Repair\Report-Repair.csproj" />
   </ItemGroup>
 
