--- a/3-12-2020/TobogganTrajectory/TobogganTrajectoryTest/TobogganTrajectoryTest.csproj
+++ b/3-12-2020/TobogganTrajectory/TobogganTrajectoryTest/TobogganTrajectoryTest.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -20,11 +20,6 @@
     <PackageReference Include="NUnit" Version="3.12.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.16.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\..\..\Utilities\Utilities\Utilities.csproj" />
-    <ProjectReference Include="..\PasswordPhilosophy\PasswordPhilosophy.csproj" />
   </ItemGroup>
 
 </Project>
