--- a/2-12-2020/PasswordPhilosophyTest/PasswordPhilosophyTest.csproj
+++ b/2-12-2020/PasswordPhilosophyTest/PasswordPhilosophyTest.csproj
@@ -1,8 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <RootNamespace>Report_Repair_Test</RootNamespace>
 
     <IsPackable>false</IsPackable>
   </PropertyGroup>
@@ -24,8 +23,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\Utilities\Utilities\Utilities.csproj" />
-    <ProjectReference Include="..\Report-Repair\Report-Repair.csproj" />
+    <ProjectReference Include="..\..\Utilities\Utilities.csproj" />
+    <ProjectReference Include="..\PasswordPhilosophy\PasswordPhilosophy.csproj" />
   </ItemGroup>
 
 </Project>
